Added more to example html page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
 	<a href="./index.html">Example Site</a>
   </header>
   <main>
-	<h1>Example Site for Themey</h1>
+	<section>
+	  <h1>Example Site for Themey</h1>
+	  <h2>2nd Heading</h2>
+	  <h3>3rd Heading</h3>
+	  <h4>4th Heading</h4>
+	  <h5>5th Heading</h5>
+	  <h6>Sixth Heading</h6>
+	</section>
+	<section>
+	  <p>
+	  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Non arcu risus quis varius quam. Vel pharetra vel turpis nunc eget lorem dolor sed viverra. Quis risus sed vulputate odio ut. Et odio pellentesque diam volutpat commodo sed. Scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam malesuada. Accumsan tortor posuere ac ut consequat semper viverra nam. In massa tempor nec feugiat nisl pretium fusce. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. Blandit turpis cursus in hac habitasse platea dictumst quisque sagittis. Egestas dui id ornare arcu odio ut. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Auctor urna nunc id cursus. Dignissim diam quis enim lobortis scelerisque. Arcu dictum varius duis at consectetur lorem donec massa sapien. Suspendisse in est ante in nibh.
+	  </p>
+	  <p>
+	  Tempor orci eu lobortis elementum nibh tellus molestie nunc non. Odio ut sem nulla pharetra diam sit amet nisl. Commodo ullamcorper a lacus vestibulum sed. Consectetur a erat nam at lectus. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Mi ipsum faucibus vitae aliquet nec. Vestibulum lectus mauris ultrices eros in. Orci phasellus egestas tellus rutrum tellus. Nisl condimentum id venenatis a condimentum vitae. Viverra tellus in hac habitasse platea dictumst vestibulum. At elementum eu facilisis sed odio morbi quis. In aliquam sem fringilla ut morbi tincidunt. Et malesuada fames ac turpis. In ante metus dictum at tempor. Purus sit amet luctus venenatis lectus magna fringilla. Volutpat lacus laoreet non curabitur gravida. Massa vitae tortor condimentum lacinia quis. Ut porttitor leo a diam sollicitudin tempor id eu. In ante metus dictum at tempor commodo ullamcorper a lacus. Id diam vel quam elementum pulvinar etiam non quam.
+	  </p>
+	  <p>
+	  Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Mi bibendum neque egestas congue quisque egestas diam in arcu. Mattis aliquam faucibus purus in massa tempor nec. Suspendisse interdum consectetur libero id faucibus nisl tincidunt. Lacus laoreet non curabitur gravida arcu ac tortor dignissim convallis. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Fusce ut placerat orci nulla. Cursus vitae congue mauris rhoncus. Suspendisse ultrices gravida dictum fusce ut. Magna sit amet purus gravida. Pellentesque dignissim enim sit amet venenatis urna cursus eget. Lacus sed viverra tellus in. Volutpat sed cras ornare arcu. Sodales ut etiam sit amet nisl purus in mollis. Morbi tristique senectus et netus et malesuada fames ac turpis. Mauris augue neque gravida in fermentum et. Fringilla phasellus faucibus scelerisque eleifend donec. Duis ultricies lacus sed turpis tincidunt id. Ornare arcu dui vivamus arcu felis. Amet facilisis magna etiam tempor orci eu lobortis.
+	  </p>
+	  <p>
+	  Tortor at auctor urna nunc id cursus metus aliquam eleifend. Nunc congue nisi vitae suscipit tellus mauris a diam. Adipiscing bibendum est ultricies integer quis auctor elit. Facilisis sed odio morbi quis commodo odio aenean sed. Diam donec adipiscing tristique risus nec. Neque gravida in fermentum et. Ac turpis egestas integer eget aliquet nibh praesent tristique. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et. Blandit massa enim nec dui. Nec dui nunc mattis enim ut tellus elementum. Lacus luctus accumsan tortor posuere ac ut consequat semper.
+	  </p>
+	  <p>
+	  Eu non diam phasellus vestibulum lorem sed. Elit ut aliquam purus sit amet luctus. Cras pulvinar mattis nunc sed blandit libero volutpat sed. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Eu sem integer vitae justo. Ipsum a arcu cursus vitae congue. Urna cursus eget nunc scelerisque. Nec feugiat in fermentum posuere urna nec. Est velit egestas dui id. Morbi tristique senectus et netus et. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Id aliquet lectus proin nibh. Duis at consectetur lorem donec massa sapien faucibus. Mollis aliquam ut porttitor leo a. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Aliquet lectus proin nibh nisl. Sed augue lacus viverra vitae congue eu consequat ac felis.
+	  </p>
+	</section>
   </main>
   <footer></footer>
 </body>
