Added more to example html page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 		Eu non diam phasellus vestibulum lorem sed. Elit ut aliquam purus sit amet luctus. Cras pulvinar mattis nunc sed blandit libero volutpat sed. Nunc scelerisque viverra mauris in aliquam sem fringilla ut. Eu sem integer vitae justo. Ipsum a arcu cursus vitae congue. Urna cursus eget nunc scelerisque. Nec feugiat in fermentum posuere urna nec. Est velit egestas dui id. Morbi tristique senectus et netus et. Volutpat blandit aliquam etiam erat velit scelerisque in dictum non. Id aliquet lectus proin nibh. Duis at consectetur lorem donec massa sapien faucibus. Mollis aliquam ut porttitor leo a. Sagittis aliquam malesuada bibendum arcu vitae elementum curabitur. Aliquet lectus proin nibh nisl. Sed augue lacus viverra vitae congue eu consequat ac felis.
 	  </p>
 	</section>
+	<section>
+	  <a href="./2-column.html">2 Column example page</a>
+	  <a href="./column-aside.html">Main column and aside example page</a>
+	</section>
   </main>
   <footer>
 	<div>2022-∞ Trademark</div>
